carousel z-indexing fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 9;
+    z-index: 20;
 }
 .nav-bar {
     background-color: rgb(22, 22, 22); 
